--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form method="post">
+    <form action="{% url 'home' %}" method="post">
         {% csrf_token %}
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Title</label>
@@ -23,6 +23,7 @@
         <button type="submit" class="btn btn-primary">Create</button>
           
       </form> <br>
+      {% if alltodos %}
       <form action="{% url 'sort' %}" method="post">
         {% csrf_token %}
         <select name="sort" id="">
@@ -48,11 +49,26 @@
             <th scope="row">{{forloop.counter}}</th>
             <td>{{todo.title}}</td>
             <td>{{todo.desc}}</td>
-            <td>button     button</td>
+            <td>
+              <form action="{% url 'update' %}" method="get" style="display: inline-block;">
+                {% csrf_token %}
+                <input type="text" value="{{todo.pk}}" name="pk" style="display: none;">
+                <input type="submit" value="Update" >
+
+              </form>
+              <form action="{% url 'delete' %}" method="post" style="display: inline-block;">
+                {% csrf_token %}
+                <input type="text" value="{{todo.pk}}" name="pk" style="display: none;">
+                <input type="submit" value="Delete">
+              </form>
+            </td>
           </tr>
           {% endfor %}
           
         </tbody>
       </table>
+      {% else %}
+      <h1>No Todo's are there please create your first Todo</h1>
+      {% endif %}
 </body>
 </html>
